Fix #425 usage of word-break in case of long long word

--- a/frontend/src/components/chat/Chat.css
+++ b/frontend/src/components/chat/Chat.css
@@ -213,6 +213,7 @@
   min-width: 65px;
   display: flex;
   align-items: center;
+  word-break: break-word;
 }
 .msgRowL {
   display: flex;
